for the love of camelot

--- a/portfollio.html
+++ b/portfollio.html
@@ -16,7 +16,7 @@
         <div class="header"><h1>PIA</h1></div>
         <div class="menu">
             <ul class="list">
-                <li id="see"><a href="#about"><p>ABOUT</p></a></li>
+                <li id="see"><a href="#about"><p>About</p></a></li>
                 <li id="what"><a href="#what-i-do">WHAT I DO</a></li>
                 <li id="works"><a href="#work">WORKS</a></li>
                 <li id="blog"><a href="#blogs">BLOG</a></li>
